# FHIaims_dev

FHIaims/: AIMS_CODE_GUIDELINES.md  CMakeLists.txt  CONTRIBUTING.md  README.md  initial_cache.example.cmake  test.cmake
FHIaims/benchmarks/: README
FHIaims/benchmarks/Ac-Lys-Ala19-H/: control.in  submit.sh
FHIaims/benchmarks/SiC-graphene/: control.in  geometry.in  submit.sh
FHIaims/ci_build/: build_aims.sh  load_node17_defaults.sh  test_aims.sh  test_aims_no_scalapack.sh  test_aims_no_spglib.sh
FHIaims/cmake/modules/: GetGitRevisionDescription.cmake  Tools.cmake
FHIaims/cmake/tests/: CPP.f90  MPI.f90  Scalapack.f90
FHIaims/cmake/toolchains/: debug.intel_2018.cmake  ext_elsi.intel.cmake  ext_gpu_elpa.intel.cmake  gnu.cmake  gpu.intel.cmake  hdf5.intel.cmake  intel.cmake  intel_2018.cmake  libaims.intel.cmake  no_c_libraries.intel.cmake  no_scalapack.intel.cmake  open_mpi.intel.cmake  pgi.cmake  serial.intel.cmake
FHIaims/doc/: .gitignore  FHI-aims.bib  FHI-aims.tex  File_format_description_geometry_in.tex  H2O_MD_berendsen.agr  H2O_trm_lindh_relaxation.agr  Na_phonons.agr  README  appendix_NEB.tex  appendix_PLUMED.tex  appendix_aims_as_subroutine.tex  appendix_aimschain.tex  appendix_basis_set_construction.tex  appendix_charged_defects.tex  appendix_cmake.tex  appendix_compilers.tex  appendix_debugmanager.tex  appendix_external_packages_and_variants.tex  appendix_gpu_acceleration.tex  appendix_input_explanation.tex  appendix_integration_batches.tex  appendix_k_points.tex  appendix_make_sys.tex  appendix_multiaims.tex  appendix_optimization.tex  appendix_recommended_reading.tex  appendix_rex.tex  appendix_structure.tex  appendix_trouble_shooting.tex  appendix_vibrations.tex  appendix_xml_output.tex  chapter_aitranss.tex  chapter_overview.tex  chapter_preface.tex  chapter_quickstart.tex  documentation_sketch.txt  qmmm.ps  section_DFPT.tex  section_EV.tex  section_Hartree.tex  (+49 more)
FHIaims/geolib/: README.md
FHIaims/regression_tests/: defaultparameters.xml  regressiontools.py  script_pbs  testsuite.xml
FHIaims/regression_tests/comparisons/: abstractcomparison.py  cmp_file.py  cmp_float.py  cmp_int.py  cmp_string.py  cmp_table.py
FHIaims/regression_tests/core/: __init__.py  abstractbase.py  commandparser.py  exceptions.py  regressionsuite.py  states.py  testcase.py  testparameter.py  testsuite.py  utilities.py  xmlparsers.py
FHIaims/regression_tests/documentation_sources/: documentation.tex
FHIaims/regression_tests/old_regression/: README  compare.pl  ediff  numdiff.py  numdiff.rc  regression.py  regression_wrapper.sh
FHIaims/regression_tests/templates/: aimscluster.conf  hydra.conf  thnec.conf
FHIaims/species_defaults/: README
FHIaims/species_defaults/NAO-J-n/: Readme.txt
FHIaims/species_defaults/really_tight/: 38_Sr_default
FHIaims/species_defaults/tight/: 38_Sr_default
FHIaims/src/: CMakeLists.txt  DFPT_pulay_mixing.f90  DFPT_wrapper.f90  Hartree_F_p_functions.f90  KH_core_states.f90  KS_optical_properties.f90  KS_optical_properties_tetrahedron.f90  MD_QH_init.f90  Makefile  Makefile.CC  Makefile.amd64_AVX  Makefile.amd64_AVX_mt  Makefile.amd64_SSE  Makefile.amd64_SSE_mt  Makefile.backend  Makefile.bgq  Makefile.cuba  Makefile.hdf5  Makefile.ipi  Makefile.omp  Makefile.shm  SPE_solver.f90  TDI_change_schedule_step.f90  TDI_map_to_center_cell.f90  TDI_update_lambda.f90  VTune.f90  VTune_stubs.f90  WannierCenters.f90  add_const_to_hamiltonian.f90  add_gradient_part_to_H_p0.f90  add_nonlocal_pot.f90  add_zora_gradient_part_p0.f90  add_zora_matrix_p1.f90  adjust_scf_settings.f90  advance_KS_solution.f90  aims_c_api.f90  aims_c_api.h  aims_gpu.f90  aims_memory_tracking.f90  analy_continue_self_energy.f90  (+771 more)
FHIaims/src/CCcalc/: CMakeLists.txt  cc_control.f90
FHIaims/src/DFPT/: 0readme_to_shanghui  CMakeLists.txt  cpscf_solver.f90  cpscf_solver.f90_DFPT_code  cpscf_solver.f90_cpscf_code  evaluate_first_order_C.f90  evaluate_first_order_DM.f90  evaluate_first_order_H.f90  evaluate_first_order_H_pulay.f90  evaluate_first_order_S.f90  evaluate_first_order_U.f90  evaluate_first_order_rho.f90  evaluate_first_order_rho_moving_grid.f90  evaluate_first_zero_order_DM_EDM.f90  evaluate_hellman_feynman_hessian.f90  evaluate_hellman_feynman_hessian_fixed.f90  evaluate_second_order_H_pulay.f90  evaluate_second_order_H_pulay_fixed.f90  evaluate_second_order_S.f90  evaluate_second_order_S_fixed.f90  evaluate_xc_shanghui.f90  integrate_first_order_H.f90  integrate_first_order_S.f90  integrate_first_order_rho.f90  integrate_hessian.f90  sum_up_whole_potential_p2_shanghui.f90  update_hartree_potential_p2_shanghui.f90
FHIaims/src/DFPT_dielectric/: CMakeLists.txt  construct_first_order_matrix_k_complex.f90  construct_matrix_complex.f90  construct_matrix_complex_no_symmetry.f90  cpscf_solver_dielectric.f90  debug_compare.f90  evaluate_Born_effective_charges_Pulay.f90  evaluate_Omega_MO_diag.f90  evaluate_Omega_MO_v1.f90  evaluate_Omega_MO_v2.f90  evaluate_Omega_part_1_sparse.f90  evaluate_dielectric_constant.f90  evaluate_first_order_DM_dielectric.f90  evaluate_first_order_EDM_dielectric.f90  evaluate_first_order_H_dielectric.f90  evaluate_first_order_Q_k_dielectric.f90  evaluate_r_dielectric.f90  (+22 more)
FHIaims/testcases/: README
FHIaims/utilities/: Lindh.py  README  WIEN2k_Band_to_aims.py  aims-SCF_convergence.awk  aims-extract_input_files_from_output.awk  aims_MD_eval.pl  aims_NH-BDP.pl  aims_band_plotting.pl  aims_effect_mass.py  aims_phonon_band_plotting.pl  aimsplot.py  aimsplot.py3  aimsplot_compare.py  angstrom_to_bohr.pl  band_mlk.py  band_mlk_soc.py  band_orginal.py  casida_broadener.f90  create_geometry_zip.pl  create_large_cell.pl  create_xyz.pl  create_xyz_movie.pl  cube_trace.py  fft-correlate.py  frac2real.py  get_coincidental_site_lattice.py  get_relaxation_info.pl  grep_convergence.pl  intermediate_geometries.pl  kpath_visualize.py  kvec_visualize.py  momentummatrix_hdf5_to_ascii_h5py_1_2_1.py  momentummatrix_hdf5_to_ascii_h5py_2_2.py  murn.FH.v4.f  murn.py  plot_DOS+pDOS.py  plot_bands_in_scf.pl  plot_dos_from_mulliken.py  plot_proj_dos.sh  plot_scf_convergence.pl  (+4 more)
(+3125 files in other folders)
